@@ -1,21 +1,11 @@
 package org.epics.archiverappliance.reshard;
 
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-
-import java.io.File;
-import java.io.StringWriter;
-import java.net.URLEncoder;
-import java.sql.Timestamp;
-import java.util.List;
-
 import io.github.bonigarcia.wdm.WebDriverManager;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.epics.archiverappliance.Event;
 import org.epics.archiverappliance.EventStream;
-import org.epics.archiverappliance.LocalEpicsTests;
 import org.epics.archiverappliance.SIOCSetup;
 import org.epics.archiverappliance.StoragePlugin;
 import org.epics.archiverappliance.TomcatSetup;
@@ -35,15 +25,23 @@ import org.epics.archiverappliance.utils.ui.JSONDecoder;
 import org.epics.archiverappliance.utils.ui.JSONEncoder;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.firefox.FirefoxDriver;
+
+import java.io.File;
+import java.io.StringWriter;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.Instant;
+import java.util.List;
 
 /**
  * Simple test to test resharding a PV from one appliance to another...
@@ -63,26 +61,28 @@ import org.openqa.selenium.firefox.FirefoxDriver;
  * @author mshankar
  *
  */
-@Category(LocalEpicsTests.class)
+@Tag("localEpics")
+@Tag("integration")
 public class BasicReshardingTest {
-	private static Logger logger = LogManager.getLogger(BasicReshardingTest.class.getName());
-	private String pvName = "UnitTestNoNamingConvention:sine";
+	private static final Logger logger = LogManager.getLogger(BasicReshardingTest.class.getName());
+	private final String pvPrefix = BasicReshardingTest.class.getSimpleName();
+	private final String pvName = pvPrefix + "UnitTestNoNamingConvention:sine";
 	private ConfigServiceForTests configService;
 	TomcatSetup tomcatSetup = new TomcatSetup();
-	SIOCSetup siocSetup = new SIOCSetup();
+	SIOCSetup siocSetup = new SIOCSetup(pvPrefix);
 	WebDriver driver;
 	String folderSTS = ConfigServiceForTests.getDefaultShortTermFolder() + File.separator + "reshardSTS";
 	String folderMTS = ConfigServiceForTests.getDefaultPBTestFolder() + File.separator + "reshardMTS";
 	String folderLTS = ConfigServiceForTests.getDefaultPBTestFolder() + File.separator + "reshardLTS";
 
-	@BeforeClass
+	@BeforeAll
 	public static void setupClass() {
 		WebDriverManager.firefoxdriver().setup();
 	}
 
-	@Before
+	@BeforeEach
 	public void setUp() throws Exception {
-		configService = new ConfigServiceForTests(new File("./bin"));
+		configService = new ConfigServiceForTests(-1);
 
 		System.getProperties().put("ARCHAPPL_SHORT_TERM_FOLDER", folderSTS);
 		System.getProperties().put("ARCHAPPL_MEDIUM_TERM_FOLDER", folderMTS);
@@ -97,7 +97,7 @@ public class BasicReshardingTest {
 		driver = new FirefoxDriver();
 	}
 
-	@After
+	@AfterEach
 	public void tearDown() throws Exception {
 		driver.quit();
 		tomcatSetup.tearDown();
@@ -126,16 +126,16 @@ public class BasicReshardingTest {
 		Thread.sleep(2*1000);
 		WebElement statusPVName = driver.findElement(By.cssSelector("#archstatsdiv_table tr:nth-child(1) td:nth-child(1)"));
 		String pvNameObtainedFromTable = statusPVName.getText();
-		assertTrue("PV Name is not " + pvName + "; instead we get " + pvNameObtainedFromTable, pvName.equals(pvNameObtainedFromTable));
+		Assertions.assertEquals(pvName, pvNameObtainedFromTable, "PV Name is not " + pvName + "; instead we get " + pvNameObtainedFromTable);
 		WebElement statusPVStatus = driver.findElement(By.cssSelector("#archstatsdiv_table tr:nth-child(1) td:nth-child(2)"));
 		String pvArchiveStatusObtainedFromTable = statusPVStatus.getText();
 		String expectedPVStatus = "Being archived";
-		assertTrue("Expecting PV archive status to be " + expectedPVStatus + "; instead it is " + pvArchiveStatusObtainedFromTable, expectedPVStatus.equals(pvArchiveStatusObtainedFromTable));
+		Assertions.assertEquals(expectedPVStatus, pvArchiveStatusObtainedFromTable, "Expecting PV archive status to be " + expectedPVStatus + "; instead it is " + pvArchiveStatusObtainedFromTable);
 		
 		PVTypeInfo typeInfoBeforePausing = getPVTypeInfo();
 		// We determine the appliance for the PV by getting it's typeInfo.
 		String applianceIdentity = typeInfoBeforePausing.getApplianceIdentity();
-		assertTrue("Cannot determine appliance identity for pv from typeinfo ", applianceIdentity != null);
+		Assertions.assertNotNull(applianceIdentity, "Cannot determine appliance identity for pv from typeinfo ");
 		
 		// We use the PV's PVTypeInfo creation date for moving data. This PVTypeInfo was just created. 
 		// We need to fake this to an old value so that the data is moved correctly.
@@ -143,19 +143,19 @@ public class BasicReshardingTest {
 		typeInfoBeforePausing.setCreationTime(TimeUtils.getStartOfYear(TimeUtils.getCurrentYear() - 4));
 		String updatePVTypeInfoURL = "http://localhost:17665/mgmt/bpl/putPVTypeInfo?pv=" + URLEncoder.encode(pvName, "UTF-8") + "&override=true";
 		GetUrlContent.postObjectAndGetContentAsJSONObject(updatePVTypeInfoURL, JSONEncoder.getEncoder(PVTypeInfo.class).encode(typeInfoBeforePausing));
-		
-		Timestamp beforeReshardingCreationTimedstamp = typeInfoBeforePausing.getCreationTime();
+
+        Instant beforeReshardingCreationTimedstamp = typeInfoBeforePausing.getCreationTime();
 
 		// Generate some data into the MTS and LTS
 		String[] dataStores = typeInfoBeforePausing.getDataStores();
-		assertTrue("Data stores is null or empty for pv from typeinfo ", dataStores != null && dataStores.length > 1);
+		Assertions.assertTrue(dataStores != null && dataStores.length > 1, "Data stores is null or empty for pv from typeinfo ");
 		for(String dataStore : dataStores) { 
 			logger.info("Data store for pv " + dataStore);
 			StoragePlugin plugin = StoragePluginURLParser.parseStoragePlugin(dataStore, configService);
 			String name = plugin.getName();
 			if(name.equals("MTS")) {
 				// For the MTS we generate a couple of days worth of data
-				Timestamp startOfMtsData = TimeUtils.minusDays(TimeUtils.now(), 3);
+                Instant startOfMtsData = TimeUtils.minusDays(TimeUtils.now(), 3);
 				long startOfMtsDataSecs = TimeUtils.convertToEpochSeconds(startOfMtsData);
 				ArrayListEventStream strm = new ArrayListEventStream(0, new RemotableEventStreamDesc(ArchDBRTypes.DBR_SCALAR_DOUBLE, pvName, TimeUtils.convertToYearSecondTimestamp(startOfMtsDataSecs).getYear()));
 				for(long offsetSecs = 0; offsetSecs < 2*24*60*60; offsetSecs += 60) { 
@@ -183,7 +183,7 @@ public class BasicReshardingTest {
 		long eventCount = getNumberOfEvents();
 		long expectedMinEventCount = 2*24*60 + 2*365;
 		logger.info("Got " + eventCount + " events");
-		assertTrue("Expecting at least " + expectedMinEventCount  + " got " + eventCount + " for ", eventCount >= expectedMinEventCount);
+		Assertions.assertTrue(eventCount >= expectedMinEventCount, "Expecting at least " + expectedMinEventCount  + " got " + eventCount + " for ");
 
 		String otherAppliance = "appliance1";
 		if(applianceIdentity.equals(otherAppliance)) { 
@@ -191,9 +191,9 @@ public class BasicReshardingTest {
 		}
 		
 		// Let's pause the PV.
-		String pausePVURL = "http://localhost:17665/mgmt/bpl/pauseArchivingPV?pv=" + URLEncoder.encode(pvName, "UTF-8");
+		String pausePVURL = "http://localhost:17665/mgmt/bpl/pauseArchivingPV?pv=" + URLEncoder.encode(pvName, StandardCharsets.UTF_8);
 		JSONObject pauseStatus = GetUrlContent.getURLContentAsJSONObject(pausePVURL);
-		assertTrue("Cannot pause PV", pauseStatus.containsKey("status") && pauseStatus.get("status").equals("ok"));
+		Assertions.assertTrue(pauseStatus.containsKey("status") && pauseStatus.get("status").equals("ok"), "Cannot pause PV");
 		Thread.sleep(1000);
 		logger.info("Successfully paused the PV; other appliance is " + otherAppliance);
 		
@@ -213,8 +213,7 @@ public class BasicReshardingTest {
 			if(pvDetailsTableFirstCol.getText().contains("Instance archiving PV")) {
 				WebElement pvDetailsTableSecondCol = pvDetailsTableRow.findElement(By.cssSelector("td:nth-child(2)"));
 				String obtainedAppliance = pvDetailsTableSecondCol.getText();
-				String expectedAppliance = otherAppliance;
-				assertTrue("Expecting appliance to be " + expectedAppliance + "; instead it is " + obtainedAppliance, expectedAppliance.equals(obtainedAppliance));
+				Assertions.assertEquals(otherAppliance, obtainedAppliance, "Expecting appliance to be " + otherAppliance + "; instead it is " + obtainedAppliance);
 				break;
 			}
 		}
@@ -224,26 +223,26 @@ public class BasicReshardingTest {
 
 		PVTypeInfo typeInfoAfterResharding = getPVTypeInfo();
 		String afterReshardingAppliance = typeInfoAfterResharding.getApplianceIdentity();
-		assertTrue("Invalid appliance identity after resharding " + afterReshardingAppliance, afterReshardingAppliance != null && afterReshardingAppliance.equals(otherAppliance));
-		Timestamp afterReshardingCreationTimedstamp = typeInfoAfterResharding.getCreationTime();
+		Assertions.assertTrue(afterReshardingAppliance != null && afterReshardingAppliance.equals(otherAppliance), "Invalid appliance identity after resharding " + afterReshardingAppliance);
+        Instant afterReshardingCreationTimedstamp = typeInfoAfterResharding.getCreationTime();
 		
 		// Let's resume the PV.
-		String resumePVURL = "http://localhost:17665/mgmt/bpl/resumeArchivingPV?pv=" + URLEncoder.encode(pvName, "UTF-8");
+		String resumePVURL = "http://localhost:17665/mgmt/bpl/resumeArchivingPV?pv=" + URLEncoder.encode(pvName, StandardCharsets.UTF_8);
 		JSONObject resumeStatus = GetUrlContent.getURLContentAsJSONObject(resumePVURL);
-		assertTrue("Cannot resume PV", resumeStatus.containsKey("status") && resumeStatus.get("status").equals("ok"));
+		Assertions.assertTrue(resumeStatus.containsKey("status") && resumeStatus.get("status").equals("ok"), "Cannot resume PV");
 
 		long postReshardEventCount = getNumberOfEvents();
 		logger.info("After resharding, got " + postReshardEventCount + " events");
-		assertTrue("Expecting at least " + expectedMinEventCount  + " got " + postReshardEventCount + " for ", postReshardEventCount >= expectedMinEventCount);
+		Assertions.assertTrue(postReshardEventCount >= expectedMinEventCount, "Expecting at least " + expectedMinEventCount  + " got " + postReshardEventCount + " for ");
 		
 		checkRemnantShardPVs();
 
 		// Make sure the creation timestamps are ok. If we have external integration, these play a part and you can not serve data because the creation timestamp is off
-		assertTrue("Creation timestamps before " 
-				+ TimeUtils.convertToHumanReadableString(beforeReshardingCreationTimedstamp) 
+		Assertions.assertEquals(beforeReshardingCreationTimedstamp, afterReshardingCreationTimedstamp, "Creation timestamps before "
+				+ TimeUtils.convertToHumanReadableString(beforeReshardingCreationTimedstamp)
 				+ " and after "
 				+ TimeUtils.convertToHumanReadableString(afterReshardingCreationTimedstamp)
-				+ " should be the same", beforeReshardingCreationTimedstamp.equals(afterReshardingCreationTimedstamp));
+				+ " should be the same");
 
 		
 	}
@@ -257,36 +256,36 @@ public class BasicReshardingTest {
 			buf.append(reshardPV.toString());
 			buf.append(",");
 		}
-		assertTrue("We seem to have some reshard temporary PV's present " + buf.toString(), reshardPVs.size() == 0);
+		Assertions.assertTrue(reshardPVs.isEmpty(), "We seem to have some reshard temporary PV's present " + buf);
 	}
 	
-	private PVTypeInfo getPVTypeInfo() throws Exception { 
-		String getPVTypeInfoURL = "http://localhost:17665/mgmt/bpl/getPVTypeInfo?pv=" + URLEncoder.encode(pvName, "UTF-8");
+	private PVTypeInfo getPVTypeInfo() throws Exception {
+		String getPVTypeInfoURL = "http://localhost:17665/mgmt/bpl/getPVTypeInfo?pv=" + URLEncoder.encode(pvName, StandardCharsets.UTF_8);
 		JSONObject typeInfoJSON = GetUrlContent.getURLContentAsJSONObject(getPVTypeInfoURL);
-		assertTrue("Cannot get typeinfo for pv using " + getPVTypeInfoURL, typeInfoJSON != null);
+		Assertions.assertNotNull(typeInfoJSON, "Cannot get typeinfo for pv using " + getPVTypeInfoURL);
         PVTypeInfo unmarshalledTypeInfo = new PVTypeInfo();
         JSONDecoder<PVTypeInfo> typeInfoDecoder = JSONDecoder.getDecoder(PVTypeInfo.class);
         typeInfoDecoder.decode((JSONObject) typeInfoJSON, unmarshalledTypeInfo);
         return unmarshalledTypeInfo;
 	}
-	
-	private long getNumberOfEvents() throws Exception { 
-		Timestamp start = TimeUtils.convertFromEpochSeconds(TimeUtils.getStartOfYearInSeconds(TimeUtils.getCurrentYear() - 2), 0);
-		Timestamp end = TimeUtils.now();
+
+	private long getNumberOfEvents() throws Exception {
+		Instant start = TimeUtils.convertFromEpochSeconds(TimeUtils.getStartOfYearInSeconds(TimeUtils.getCurrentYear() - 2), 0);
+		Instant end = TimeUtils.now();
 		RawDataRetrievalAsEventStream rawDataRetrieval = new RawDataRetrievalAsEventStream("http://localhost:" + ConfigServiceForTests.RETRIEVAL_TEST_PORT+ "/retrieval/data/getData.raw");
-		Timestamp obtainedFirstSample = null;
+		Instant obtainedFirstSample = null;
 		long eventCount = 0;
 		try(EventStream stream = rawDataRetrieval.getDataForPVS(new String[] { pvName }, start, end, null)) {
 			if(stream != null) {
 				for(Event e : stream) {
-					if(obtainedFirstSample == null) { 
+					if (obtainedFirstSample == null) {
 						obtainedFirstSample = e.getEventTimeStamp();
 					}
 					logger.debug("Sample from " + TimeUtils.convertToHumanReadableString(e.getEventTimeStamp()));
 					eventCount++;
 				}
-			} else { 
-				fail("Stream is null when retrieving data.");
+			} else {
+				Assertions.fail("Stream is null when retrieving data.");
 			}
 		}
 		return eventCount;
